--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <section>
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-6 col-xs-12">
+          <div class="col-lg-6 col-sm-6 col-xs-12">
             <div>
               <button class="botgri">Historia destacada</button>
             </div>
@@ -108,11 +108,11 @@
               </div>
             </div>
             </div>
-            <div class="col-lg-6 col-md-6 col-xs-12">
+            <div class="col-lg-6 col-sm-6 col-xs-12">
               <div class="row">
                 <div class="col-lg-6">
                   <div class=" col-lg-12 gris">
-                    <button>Historia Destacada</button>
+                    <button class="botgri">Historia Destacada</button>
                     <iframe src="https://www.youtube.com/embed/ce26fhpPWsw" allowfullscreen class="espacio"></iframe>
                     <h4>Lorem ipsum dolor</h4>
                     <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit, excepturi sunt odit alias facilis blanditiis qui magni. Officiis harum, cupiditate facilis, est sint sunt. Animi, aut, quae. Quae, atque, sequi.</p>
@@ -130,41 +130,41 @@
                     <div class="col-lg-12 col-xs-12">
                       <button class="botgri">Agenda</button>
                     <div class="row">
-                      <div class="col-lg-3  col-md-2 col-xs-3 cuadro">
+                      <div class="col-lg-3  col-sm-2 col-xs-3 cuadro">
                         <p class="text-center">23</p>
                         <p class="text-center">Enero</p>
                       </div>
-                      <div class="col-lg-9 col-md-10 col-xs-9">
+                      <div class="col-lg-9 col-sm-10 col-xs-9">
                         <h5>Lorem ipsum dolor sit am</h5>
                         <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-3 col-md-2 col-xs-3 cuadro">
+                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
                         <p class="text-center">23</p>
                         <p class="text-center">Enero</p>
                       </div>
-                      <div class="col-lg-9 col-md-10 col-xs-9">
+                      <div class="col-lg-9 col-sm-10 col-xs-9">
                         <h5 >Lorem ipsum dolor sit am</h5>
                         <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-3 col-md-2 col-xs-3 cuadro">
+                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
                         <p class="text-center">23</p>
                         <p class="text-center">Enero</p>
                       </div>
-                      <div class="col-lg-9 col-md-10 col-xs-9">
+                      <div class="col-lg-9 col-sm-10 col-xs-9">
                         <h5 class="small text-justify">Lorem ipsum dolor sit am</h5>
                         <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-3 col-md-2 col-xs-3 cuadro">
+                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
                         <p class="text-center">23</p>
                         <p class="text-center">Enero</p>
                       </div>
-                      <div class="col-lg-9 col-md-10 col-xs-9">
+                      <div class="col-lg-9 col-sm-10 col-xs-9">
                         <h5>Lorem ipsum dolor sit am</h5>
                         <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
                       </div>
@@ -173,7 +173,7 @@
                   </div>
                   <hr>
                   <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 col-sm-12 col-xs-12">
                       <h4>Mas informacion</h4>
                     </div>
                   </div>
@@ -193,11 +193,11 @@
                   </div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-6 hidden-md hidden-xs">
+                  <div class="col-lg-6 hidden-sm hidden-xs">
                   <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 hidden-sm hidden-xs">
                       <h3>Mas informacion</h3>
-                      <p> <span class="glyphicon glyphicon-bookmark">Finanzas y fiscalizacion</span></p>
+                      <p> <span class="glyphicon glyphicon-bookmark"> Finanzas y fiscalizacion</span></p>
                       <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
                       <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
                       <p><span class="glyphicon glyphicon-bookmark"> Habitad/urbanismo</span></p>
@@ -217,7 +217,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam eius,  </p>
                       </div>
                     </div>
-                    <hr>
+                    <hr id="barra">
                     <div class="row gris">
                       <div class="col-lg-12">
                         <h4>MAGAZINE</h4>
@@ -228,7 +228,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At aperiam eius,  </p>
                       </div>
                     </div>
-                    <div class="row gris" id="caja">
+                    <div class="row gris">
                       <div class="col-lg-12">
                         <p>Nueva generacion de la internet</p>
                       </div>
@@ -240,12 +240,12 @@
         </div>
       </div>
   </section>
-  <hr>
+  <hr id="barra">
   <footer>
     <div class="container">
       <div class="row">
-      <div class="col-lg-12 col-md-12 col-xs-12">
-          <div class="col-lg-3 col-md-3 col-xs-6">
+      <div class="col-lg-12 col-sm-12 col-xs-12">
+          <div class="col-lg-3 col-sm-3 col-xs-6">
             <h4>Rubros</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
@@ -253,7 +253,7 @@
             <p><span class="glyphicon glyphicon-bookmark"> Sanidad</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Sanidad</span></p>
           </div>
-           <div class="col-lg-2 hidden-md hidden-xs">
+           <div class="col-lg-2 hidden-sm hidden-xs">
             <h4>Expertise</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
@@ -263,19 +263,19 @@
             <p><span class="glyphicon glyphicon-bookmark"> Sanidad</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Sanidad</span></p>
           </div>
-           <div class="col-lg-2 col-md-3 col-xs-6">
+           <div class="col-lg-2 col-sm-3 col-xs-6">
             <h4>subscripcion</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Habitad/urbanismo</span></p>
           </div>
-           <div class="col-lg-2 col-md-3 col-xs-6">
+           <div class="col-lg-2 col-sm-3 col-xs-6">
             <h4>Nosotros</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Habitad/urbanismo</span></p>
           </div>
-           <div class="col-lg-3 col-md-3 col-xs-6">
+           <div class="col-lg-3 col-sm-3 col-xs-6">
             <h4>Contacto</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
