correccion de parrafos

--- a/index.html
+++ b/index.html
@@ -128,69 +128,69 @@
                   <hr>
                   <div class="row">
                     <div class="col-lg-12 col-xs-12">
-                      <button class="botgri">Agenda</button>
+                        <button class="botgri">Agenda</button>
+                      <div class="row">
+                        <div class="col-lg-3  col-sm-2 col-xs-3 cuadro">
+                          <p class="text-center">23</p>
+                          <p class="text-center">Enero</p>
+                        </div>
+                        <div class="col-lg-9 col-sm-10 col-xs-9">
+                          <h5>Lorem ipsum dolor sit am</h5>
+                          <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
+                          <p class="text-center">23</p>
+                          <p class="text-center">Enero</p>
+                        </div>
+                        <div class="col-lg-9 col-sm-10 col-xs-9">
+                          <h5 >Lorem ipsum dolor sit am</h5>
+                          <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
+                          <p class="text-center">23</p>
+                          <p class="text-center">Enero</p>
+                        </div>
+                        <div class="col-lg-9 col-sm-10 col-xs-9">
+                          <h5 class="small text-justify">Lorem ipsum dolor sit am</h5>
+                          <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
+                          <p class="text-center">23</p>
+                          <p class="text-center">Enero</p>
+                        </div>
+                        <div class="col-lg-9 col-sm-10 col-xs-9">
+                          <h5>Lorem ipsum dolor sit am</h5>
+                          <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                        </div>
+                      </div>
+                      </div>
+                    </div>
+                    <hr>
                     <div class="row">
-                      <div class="col-lg-3  col-sm-2 col-xs-3 cuadro">
-                        <p class="text-center">23</p>
-                        <p class="text-center">Enero</p>
-                      </div>
-                      <div class="col-lg-9 col-sm-10 col-xs-9">
-                        <h5>Lorem ipsum dolor sit am</h5>
-                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                      <div class="col-lg-12 col-sm-12 col-xs-12">
+                        <h4>Mas informacion</h4>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
-                        <p class="text-center">23</p>
-                        <p class="text-center">Enero</p>
-                      </div>
-                      <div class="col-lg-9 col-sm-10 col-xs-9">
-                        <h5 >Lorem ipsum dolor sit am</h5>
-                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                      <div class="col-lg-12">
+                        <p>Localidades</p>
+                        <p>Lorem ipsum dolor sit amet</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut itaque amet voluptas </span>
                       </div>
                     </div>
                     <div class="row">
-                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
-                        <p class="text-center">23</p>
-                        <p class="text-center">Enero</p>
-                      </div>
-                      <div class="col-lg-9 col-sm-10 col-xs-9">
-                        <h5 class="small text-justify">Lorem ipsum dolor sit am</h5>
-                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
+                      <div class="col-lg-12">
+                        <p>Localidades</p>
+                        <p>Lorem ipsum dolor sit amet</p>
+                        <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut itaque amet voluptas </span>
                       </div>
                     </div>
-                    <div class="row">
-                      <div class="col-lg-3 col-sm-2 col-xs-3 cuadro">
-                        <p class="text-center">23</p>
-                        <p class="text-center">Enero</p>
-                      </div>
-                      <div class="col-lg-9 col-sm-10 col-xs-9">
-                        <h5>Lorem ipsum dolor sit am</h5>
-                        <p class="small text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur aspernatur </p>
-                      </div>
-                    </div>
-                    </div>
-                  </div>
-                  <hr>
-                  <div class="row">
-                    <div class="col-lg-12 col-sm-12 col-xs-12">
-                      <h4>Mas informacion</h4>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <p>Localidades</p>
-                      <p>Lorem ipsum dolor sit amet</p>
-                      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut itaque amet voluptas </span>
-                    </div>
-                  </div>
-                  <div class="row">
-                    <div class="col-lg-12">
-                      <p>Localidades</p>
-                      <p>Lorem ipsum dolor sit amet</p>
-                      <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut itaque amet voluptas </span>
-                    </div>
-                  </div>
                 </div>
                 <div class="row">
                   <div class="col-lg-6 hidden-sm hidden-xs">
@@ -269,6 +269,7 @@
             <p><span class="glyphicon glyphicon-bookmark"> Medio ambiente</span></p>
             <p><span class="glyphicon glyphicon-bookmark"> Habitad/urbanismo</span></p>
           </div>
+          <div class="clearfix visible-xs-block"></div>
            <div class="col-lg-2 col-sm-3 col-xs-6">
             <h4>Nosotros</h4>
             <p><span class="glyphicon glyphicon-bookmark"> Inversion y equipos</span></p>
